[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
autobenches = false
autobins = false
cargo-features = ["edition"]
edition = "2018"
name = "veloci"
version = "0.1.0"

[[bench]]
harness = false
name = "bench_jmdict"
path = "benches/bench_jmdict.rs"

[[bench]]
name = "bench_collection"
path = "benches/bench_collection.rs"

[[bench]]
name = "bench_persistence"
path = "benches/bench_persistence.rs"

[[bin]]
name = "create_index"
path = "src/bin/create_index.rs"

[[bin]]
name = "convert_json_to_line_delimited"
path = "src/bin/convert_json_to_line_delimited.rs"

[dependencies]
byteorder = "1.3.2"
chrono = "0.4.9"
colored = "1.8.0"
cpuprofiler = "0.0.3"
crossbeam-channel = "0.3.9"
dot = "0.1.4"
dump = "0.1.1"
failure = "0.1.5"
fixedbitset = "0.1.9"
fnv = "1.0.6"
fst = "0.3.5"
itertools = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.8"
lru-cache = "0.1.2"
lru_time_cache = "0.9.0"
measure_time = "0.6.0"
memmap = "0.7.0"
num = "0.2.0"
prettytable-rs = "0.8.0"
rayon = "1.2.0"
regex = "1.3.1"
ron = "0.5.1"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
tempfile = "3.1.0"
toml = "0.5.3"
argh = "0.1.3"

[dependencies.env_logger]
features = []
version = "0.7.1"


[dependencies.buffered_index_writer]
path = "buffered_index_writer"

[dependencies.doc_store]
path = "doc_store"

[dependencies.half]
features = ["use-intrinsics", "serialize", "std"]
version = "1.3.0"

[dependencies.json_converter]
path = "json_converter"

[dependencies.levenshtein_automata]
features = ["fst_automaton"]
git = "https://github.com/PSeitz/levenshtein-automata"

[dependencies.ordered-float]
features = ["serde"]
version = "1.0.2"

[dependencies.parking_lot]
features = ["nightly"]
version = "0.9.0"

[dependencies.parser]
path = "parser"

[dependencies.term_hashmap]
git = "https://github.com/PSeitz/rust_string_hashmap"

[dependencies.vint]
git = "https://github.com/PSeitz/rust_vint"

[dev-dependencies.color-backtrace]
version = "0.3.0"
default-features = false

[dev-dependencies]
more-asserts = "0.2.1"
pretty_assertions = "0.6.1"
rand = "0.7.2"

[dev-dependencies.criterion]
features = []
version = "0.3.0"

[features]
create = []
default = ["create"]

[lib]
name = "veloci"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "unwind"

[profile.dev]
debug = false
