[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
autobenches = false
autobins = false
edition = "2021"
name = "veloci"
version = "0.1.1"

[[bench]]
harness = false
name = "bench_jmdict"
path = "benches/bench_jmdict.rs"

[[bench]]
name = "bench_collection"
path = "benches/bench_collection.rs"

[[bench]]
name = "bench_persistence"
path = "benches/bench_persistence.rs"

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.24"
colored = "2.0.0"
cpuprofiler = "0.0.4"
crossbeam-channel = "0.5.7"
dot = "0.1.4"
failure = "0.1.8"
fixedbitset = "0.4.2"
fnv = "1.0.7"
fst = "0.4.7"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
lru-cache = "0.1.2"
lru_time_cache = "0.11.11"
measure_time = "0.8.2"
num = "0.4.0"
prettytable-rs = "0.10.0"
rayon = "1.7.0"
regex = "1.7.1"
ron = "0.5.0"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
tempfile = "3.4.0"
toml = "0.7.3"
inohashmap = "0.3.0"
vint32 = { version = "0.3.0", features = ["common-encoding"] }
ownedbytes = "0.4.0"
memmap2 = "0.5.10"

[dependencies.env_logger]
features = []
version = "0.10.0"

[dependencies.regex-automata]
features = ["transducer"]
version = "0.1.9"

[dependencies.buffered_index_writer]
path = "buffered_index_writer"

[dependencies.doc_store]
path = "doc_store"

[dependencies.half]
features = ["std"]
version = "2.2.1"

[dependencies.json_converter]
path = "json_converter"

[dependencies.veloci_levenshtein_automata]
version = "0.1.0"
features = ["fst_automaton"]

[dependencies.ordered-float]
features = ["serde"]
version = "3.4.0"

[dependencies.parking_lot]
features = ["nightly"]
version = "0.12.1"

# [dependencies.parser]
# path = "parser"

[dependencies.query_parser]
path = "query_parser"

# [dependencies.term_hashmap]
# git = "https://github.com/PSeitz/rust_string_hashmap"

[dev-dependencies]
more-asserts = "0.3.1"
pretty_assertions = "1.3.0"
rand = "0.8.5"

[dev-dependencies.color-backtrace]
version = "0.5.1"
default-features = false

[dev-dependencies.criterion]
features = []
version = "0.4.0"

[features]
create = []
unstable = []
default = ["create"]

[lib]
name = "veloci"
path = "src/lib.rs"

[workspace]
members = ["buffered_index_writer",
"doc_store",
"server",
"veloci_bins",
"json_converter",
"query_parser"]

[profile.release]
debug = true
lto = true
opt-level = 3
panic = "unwind"

[profile.bench]
debug = false
lto = true
opt-level = 3
