[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
autobenches = false
autobins = false
edition = "2021"
name = "veloci"
version = "0.1.1"

[[bench]]
harness = false
name = "bench_jmdict"
path = "benches/bench_jmdict.rs"

[[bench]]
name = "bench_collection"
path = "benches/bench_collection.rs"

[[bench]]
name = "bench_persistence"
path = "benches/bench_persistence.rs"

[dependencies]
chrono = "0.4.31"
colored = "2.0.4"
crossbeam-channel = "0.5.8"
dot = "0.1.4"
fixedbitset = "0.4.2"
fnv = "1.0.7"
fst = "0.4.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
lru_time_cache = "0.11.11"
measure_time = "0.8.2"
num = "0.4.1"
prettytable-rs = "0.10.0"
rayon = "1.8.0"
regex = "1.10.2"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
toml = "0.8.8"
inohashmap = "0.3.0"
vint32 = { version = "0.3.0", features = ["common-encoding"] }
ownedbytes = "0.6.0"
memmap2 = "0.9.0"
stable_deref_trait = "1.2.0"
thiserror = "1.0.50"

[dependencies.env_logger]
features = []
version = "0.10.1"

[dependencies.regex-automata]
features = ["transducer"]
version = "0.1.9"

[dependencies.buffered_index_writer]
path = "buffered_index_writer"

[dependencies.directory]
path = "directory"

[dependencies.doc_store]
path = "doc_store"

[dependencies.half]
features = ["std"]
version = "2.3.1"

[dependencies.json_converter]
path = "json_converter"

[dependencies.veloci_levenshtein_automata]
version = "0.1.0"
features = ["fst_automaton"]

[dependencies.ordered-float]
features = ["serde"]
version = "4.1.1"

[dependencies.parking_lot]
features = ["nightly"]
version = "0.12.1"

# [dependencies.parser]
# path = "parser"

[dependencies.query_parser]
path = "query_parser"

# [dependencies.term_hashmap]
# git = "https://github.com/PSeitz/rust_string_hashmap"

[dev-dependencies]
more-asserts = "0.3.1"
pretty_assertions = "1.4.0"
rand = "0.8.5"

[dev-dependencies.color-backtrace]
version = "0.6.1"
default-features = false

[dev-dependencies.criterion]
features = []
version = "0.5.1"

[features]
create = []
unstable = []
default = ["create"]

[lib]
name = "veloci"
path = "src/lib.rs"

[workspace]
members = ["buffered_index_writer",
"directory",
"doc_store",
"server",
"veloci_bins",
"json_converter",
"query_parser"]

[profile.release]
debug = true
lto = true
opt-level = 3
panic = "unwind"

[profile.bench]
debug = false
lto = true
opt-level = 3
