[package]
edition = "2018"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
name = "buffered_index_writer"
version = "0.1.0"

[[bench]]
harness = false
name = "bench"

[dependencies]
itertools = "0.8.0"
memmap = "0.7.0"
rayon = "1.0.3"
tempfile = "3.0.5"

[dependencies.vint]
git = "https://github.com/PSeitz/rust_vint"

[dev-dependencies]
measure_time = "0.6.0"
criterion = "0.2.5"
