[package]
edition = "2021"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
name = "buffered_index_writer"
version = "0.1.0"

[[bench]]
harness = false
name = "bench"

[dependencies]
itertools = "0.10.5"
memmap2 = "0.5.10"
rayon = "1.7.0"
tempfile = "3.4.0"
vint32 = { version = "0.3.0", features = ["common-encoding"] }
directory = { path = "../directory" }
uuid = { version = "1.3.0", features = ["v4"] }
ownedbytes = "0.4.0"

[dev-dependencies]
measure_time = "0.8.2"
criterion = "0.2.5"
