cargo-features = ["edition"]
[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"
name = "compact_int"
version = "0.1.0"

[dependencies]
byteorder = "1.2.6"
serde = "1.0.79"

[dependencies.vint]
git = "https://github.com/PSeitz/rust_vint"

[dev-dependencies]
serde_derive = "1.0.79"
