[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"
name = "doc_store"
version = "0.1.0"
[dependencies]
lz4 = { version = "1.23.1", optional = true}
lz4-compress = { version = "0.1.1", optional = true}
snap  =  { version = "1.0.0", optional = true}

[dependencies.vint]
git = "https://github.com/PSeitz/rust_vint"

[dependencies.color-backtrace]
version = "0.3.0"
default-features = false

[dependencies.lz4_flex]
optional = true
git = "https://github.com/PSeitz/lz4_flex"
# path = "../../lz4_flex"

[profile.dev]
debug = false

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "unwind"

[features]
default = []
comp_lz4_linked = ["lz4"]
comp_lz4_rust = ["lz4-compress"]
comp_lz4_flexx = ["lz4_flex"]
comp_snappy = ["snap"]

[[bin]]
name = "test_comp"
path = "bin/test_comp.rs"