[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
name = "json_converter"
version = "0.1.0"
[[bench]]
harness = false
name = "bench"

[dependencies]
# flexi_logger = "0.6"
fnv = "1.0.3"
# heapsize = "0.4.1"
# lazy_static = "1.0.0"
log = "0.4"
rand = "0.4"
# rayon = "1.0.1"
regex = "0.2"
serde = "1.0.1"
serde_derive = "1.0.1"
serde_json = "1.0.0"

[dev-dependencies]
colored = "1.4"
criterion = "0.2.3"
pretty_assertions = "0.1.2"

[dev-dependencies.stainless]
git = "https://github.com/PSeitz/stainless"
