[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
name = "json_converter"
version = "0.1.0"
[[bench]]
harness = false
name = "bench"

[dependencies]
fnv = "1.0.6"
serde = "1.0.71"
serde_json = "1.0.26"
#todo move bench dependencies to own crate
# log = "0.4.3"
# rand = "0.5.5"
# regex = "1.0.2"
# serde_derive = "1.0.71"

[dev-dependencies]
stainless2 = "0.1.13"

[dev-dependencies.criterion]
features = []
version = "0.2.4"
