cargo-features = ["edition"]
[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
name = "json_converter"
version = "0.1.0"
edition = "2018"
[[bench]]
harness = false
name = "bench"

[dependencies]
fnv = "1.0.6"
serde = "1.0.79"
serde_json = "1.0.32"

[dev-dependencies.criterion]
features = []
version = "0.2.5"
