[package]
name = "pest_parser"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"

[profile.dev]
debug = false
