[package]
authors = ["Pascal Powerman <you@gmail.com>"]
autobenches = false
name = "veloci_server"
version = "0.1.0"
[[bin]]
name = "rocket_server"
path = "rocket_server.rs"

[dependencies]
chashmap = "2.2.0"
flate2 = "1.0.2"
fnv = "1.0.6"
lazy_static = "1.1.0"
log = "0.4.3"
measure_time = "0.6.0"
# rocket = "0.3.15"
rocket = "0.4"
# rocket_codegen = "0.3.15"
# rocket_contrib = "0.3.15"
rocket_contrib = "0.4.0"
# rocket_cors = "0.3.0"
rocket_cors = "0.4.0"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"

[dependencies.multipart]
git = "https://github.com/pseitz/multipart"
features = ["rocket"]
# version = "0.15.2"

[dependencies.veloci]
path = "../"

[dependencies.uuid]
features = ["v4"]
version = "0.6.5"

[dev-dependencies]
criterion = "0.2.4"
pretty_assertions = "0.5.1"
rand = "0.5.5"
tempfile = "3.0.3"
[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "unwind"
