[package]
authors = ["Pascal Powerman <you@gmail.com>"]
autobenches = false
name = "veloci_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rocket_server"
path = "rocket_server.rs"

[dependencies]
chashmap = "2.2.2"
#flate2 = "1.0.25"
#fnv = "1.0.7"
lazy_static = "1.4.0"
#log = "0.4.17"
measure_time = "0.8.2"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"

[dependencies.veloci]
path = "../"

[dev-dependencies]
criterion = "0.4.0"
pretty_assertions = "1.3.0"
rand = "0.8.5"
tempfile = "3.4.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "unwind"
