[package]
name = "veloci_bins"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
buffered_index_writer = { path = "../buffered_index_writer" }
fst = "0.4.7"
measure_time = "0.8.2"
rayon = "1.8.0"
serde = "1.0.192"
serde_json = "1.0.108"
veloci = { path = "../" }
